Style: Fix overflow problem caused by review images

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -29,6 +29,7 @@ h1 {
 .movie {
     padding: 20px;
     min-height: 200px;
+    max-height: 200px;
 }
 
 .movie:hover {
